@@ -1,7 +1,6 @@
 package main.java.jnotepadpp;
 
 import java.io.IOException;
-import java.io.Serial;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -16,7 +15,6 @@ import javax.swing.JFileChooser;
 import javax.swing.JOptionPane;
 import javax.swing.JScrollPane;
 import javax.swing.JTabbedPane;
-import javax.swing.event.ChangeEvent;
 import javax.swing.event.ChangeListener;
 import javax.swing.event.DocumentEvent;
 import javax.swing.event.DocumentListener;
@@ -24,27 +22,22 @@ import javax.swing.event.DocumentListener;
 import main.java.listener.MultipleDocumentListener;
 import main.java.listener.SingleDocumentListener;
 import main.java.local.ILocalizationProvider;
+import main.java.util.Constants;
 
 public class DefaultMultipleDocumentModel extends JTabbedPane implements MultipleDocumentModel {
 
-	private static final long serialVersionUID = 1L;
-	private static final ImageIcon greenDiskette = new ImageIcon(
-			System.getProperty("user.dir") + "\\main\\resources\\greenDiskette.png");
-	private static final ImageIcon redDiskette = new ImageIcon(
-			System.getProperty("user.dir") + "\\main\\resources\\redDiskette.png");
-
-	private List<SingleDocumentModel> documents;
+	private final List<SingleDocumentModel> documents;
 	private SingleDocumentModel currentDocument;
 	private SingleDocumentModel previousDocument;
-	private List<MultipleDocumentListener> listeners;
+	private final List<MultipleDocumentListener> listeners;
 	private int currentIndex;
-	private JTabbedPane tabs;
-	private SingleDocumentListener singleDocumentListener;
-	private DocumentListener jTextAreaListener;
-	private JNotepadPP notepad;
+	private final JTabbedPane tabs;
+	private final SingleDocumentListener singleDocumentListener;
+	private final DocumentListener jTextAreaListener;
+	private final JNotepadPP notepad;
 	private boolean saveAs;
 
-	private ILocalizationProvider provider;
+	private final ILocalizationProvider provider;
 
 	public DefaultMultipleDocumentModel(JNotepadPP notepad, ILocalizationProvider provider) {
 		this.documents = new ArrayList<>();
@@ -59,7 +52,7 @@ public class DefaultMultipleDocumentModel extends JTabbedPane implements Multipl
 
 			@Override
 			public void documentRemoved(SingleDocumentModel model) {
-				notepad.closeWindow(model, currentIndex);
+				notepad.closeWindow(model);
 				if (tabs.getTabCount() == 1) {
 					createNewDocument();
 					tabs.removeTabAt(0);
@@ -69,7 +62,7 @@ public class DefaultMultipleDocumentModel extends JTabbedPane implements Multipl
 				documents.remove(model);
 				notepad.setTitle(currentIndex == -1 ? "JNotepad++"
 						: (documents.get(currentIndex).getFilePath().toString().equals("(unnamed)") ? "unnamed"
-								: documents.get(currentIndex).getFilePath().toString()) + " - JNotepad++");
+						: documents.get(currentIndex).getFilePath().toString()) + " - JNotepad++");
 				previousDocument = new DefaultSingleDocumentModel(currentDocument.getTextComponent().getText(),
 						currentDocument.getFilePath());
 				currentDocument = currentIndex == -1 ? null
@@ -81,7 +74,7 @@ public class DefaultMultipleDocumentModel extends JTabbedPane implements Multipl
 				JScrollPane pane = new JScrollPane(model.getTextComponent());
 				tabs.addTab(
 						model.getFilePath().toString().substring(model.getFilePath().toString().lastIndexOf("\\") + 1),
-						greenDiskette, pane, model.getFilePath().toString());
+						new ImageIcon(Constants.GREEN_DISKETTE_PATH), pane, model.getFilePath().toString());
 				notepad.setSaveOptions(false);
 				tabs.setSelectedIndex(documents.size() - 1);
 				currentDocument = model;
@@ -105,47 +98,43 @@ public class DefaultMultipleDocumentModel extends JTabbedPane implements Multipl
 			@Override
 			public void documentModifyStatusUpdated(SingleDocumentModel model) {
 				int counter = 0;
-				Iterator<SingleDocumentModel> iterator = iterator();
-				while (iterator.hasNext()) {
-					if (iterator.next().equals(model)) {
-						tabs.setIconAt(counter, redDiskette);
-						notepad.setSaveOptions(true);
-					} else {
-						counter++;
-					}
-				}
+                for (SingleDocumentModel singleDocumentModel : DefaultMultipleDocumentModel.this) {
+                    if (singleDocumentModel.equals(model)) {
+                        tabs.setIconAt(counter, new ImageIcon(Constants.RED_DISKETTE_PATH));
+                        notepad.setSaveOptions(true);
+                        currentDocument.setModified(true);
+                    } else {
+                        counter++;
+                    }
+                }
 			}
 
 			@Override
 			public void documentFilePathUpdated(SingleDocumentModel model) {
 				int counter = 0;
-				Iterator<SingleDocumentModel> iterator = iterator();
-				while (iterator.hasNext()) {
-					if (iterator.next().equals(model)) {
-						tabs.setTitleAt(counter, model.getFilePath().toString()
-								.substring(model.getFilePath().toString().lastIndexOf("\\") + 1));
-					} else {
-						counter++;
-					}
-				}
+                for (SingleDocumentModel singleDocumentModel : DefaultMultipleDocumentModel.this) {
+                    if (singleDocumentModel.equals(model)) {
+                        tabs.setTitleAt(counter, model.getFilePath().toString()
+                                .substring(model.getFilePath().toString().lastIndexOf("\\") + 1));
+                    } else {
+                        counter++;
+                    }
+                }
 
 			}
 		};
 
-		ChangeListener tabsListener = new ChangeListener() {
-			@Override
-			public void stateChanged(ChangeEvent e) {
-				JTabbedPane source = (JTabbedPane) e.getSource();
-				currentIndex = source.getSelectedIndex();
-				notepad.setTitle(currentIndex == -1 ? "JNotepad++"
-						: (documents.get(currentIndex).getFilePath().toString().equals("(unnamed)") ? "unnamed"
-								: documents.get(currentIndex).getFilePath().toString()) + " - JNotepad++");
-				previousDocument = new DefaultSingleDocumentModel(currentDocument.getTextComponent().getText(),
-						currentDocument.getFilePath());
-				currentDocument = currentIndex == -1 ? null
-						: (DefaultSingleDocumentModel) documents.get(tabs.getSelectedIndex());
-			}
-		};
+		ChangeListener tabsListener = e -> {
+            JTabbedPane source = (JTabbedPane) e.getSource();
+            currentIndex = source.getSelectedIndex();
+            notepad.setTitle(currentIndex == -1 ? "JNotepad++"
+                    : (documents.get(currentIndex).getFilePath().toString().equals("(unnamed)") ? "unnamed"
+                    : documents.get(currentIndex).getFilePath().toString()) + " - JNotepad++");
+            previousDocument = new DefaultSingleDocumentModel(currentDocument.getTextComponent().getText(),
+                    currentDocument.getFilePath());
+            currentDocument = currentIndex == -1 ? null
+                    : (DefaultSingleDocumentModel) documents.get(tabs.getSelectedIndex());
+        };
 
 		this.tabs.addChangeListener(tabsListener);
 
@@ -186,7 +175,7 @@ public class DefaultMultipleDocumentModel extends JTabbedPane implements Multipl
 	}
 
 	@Override
-	public SingleDocumentModel createNewDocument() {
+	public void createNewDocument() {
 		Path path = Paths.get("(unnamed)");
 		DefaultSingleDocumentModel document = new DefaultSingleDocumentModel("", path);
 		document.addSingleDocumentListener(singleDocumentListener);
@@ -199,7 +188,6 @@ public class DefaultMultipleDocumentModel extends JTabbedPane implements Multipl
 			l.documentAdded(document);
 		}
 
-		return document;
 	}
 
 	@Override
@@ -207,12 +195,8 @@ public class DefaultMultipleDocumentModel extends JTabbedPane implements Multipl
 		return this.documents.get(currentIndex);
 	}
 
-	public void setCurrentDocument(SingleDocumentModel document) {
-		this.currentDocument = document;
-	}
-
 	@Override
-	public SingleDocumentModel loadDocument(Path path) {
+	public void loadDocument(Path path) {
 		byte[] octet;
 		try {
 			octet = Files.readAllBytes(path);
@@ -220,7 +204,7 @@ public class DefaultMultipleDocumentModel extends JTabbedPane implements Multipl
 			JOptionPane.showMessageDialog(notepad,
 					provider.getString("errorFileReadMsg") + " " + path.toFile().getAbsolutePath() + ".",
 					provider.getString("error"), JOptionPane.ERROR_MESSAGE);
-			return null;
+			return;
 		}
 
 		String text = new String(octet, StandardCharsets.UTF_8);
@@ -237,7 +221,6 @@ public class DefaultMultipleDocumentModel extends JTabbedPane implements Multipl
 			l.documentAdded(document);
 		}
 
-		return document;
 	}
 
 	@Override
@@ -264,23 +247,22 @@ public class DefaultMultipleDocumentModel extends JTabbedPane implements Multipl
 		if ((Files.exists(newPath) && saveAs) || (Files.exists(newPath) && model.getFirstSave())) {
 			String[] options = new String[] { provider.getString("yes"), provider.getString("no") };
 
-			int rezultat = JOptionPane.showOptionDialog(notepad, provider.getString("fileAlreadyExists"),
+			int result = JOptionPane.showOptionDialog(notepad, provider.getString("fileAlreadyExists"),
 					provider.getString("warning"), JOptionPane.DEFAULT_OPTION, JOptionPane.WARNING_MESSAGE, null,
 					options, options[0]);
 
-			switch (rezultat) {
-			case JOptionPane.CLOSED_OPTION:
-				return;
-			case JOptionPane.NO_OPTION:
-				break;
-			case JOptionPane.YES_OPTION:
-				notepad.setSavePath(newPath);
+			switch (result) {
+				case JOptionPane.CLOSED_OPTION:
+					return;
+				case JOptionPane.NO_OPTION:
+					break;
+				case JOptionPane.YES_OPTION:
+					notepad.setSavePath(newPath);
 			}
 		}
 
-		byte[] data = currentDocument.getTextComponent().getText().getBytes(StandardCharsets.UTF_8);
-		try {
-			Files.write(newPath, data);
+        try {
+			Files.writeString(newPath, currentDocument.getTextComponent().getText());
 		} catch (IOException ex) {
 			JOptionPane.showMessageDialog(DefaultMultipleDocumentModel.this,
 					provider.getString("errorFileWriteMsg") + " " + newPath, provider.getString("error"),
@@ -294,7 +276,7 @@ public class DefaultMultipleDocumentModel extends JTabbedPane implements Multipl
 		notepad.setTitle(model.getFilePath().toString() + " - JNotepad++");
 		this.setTitleAt(currentIndex,
 				model.getFilePath().toString().substring(model.getFilePath().toString().lastIndexOf("\\") + 1));
-		this.setIconAt(currentIndex, greenDiskette);
+		this.setIconAt(currentIndex, new ImageIcon(Constants.GREEN_DISKETTE_PATH));
 		this.notepad.setSaveOptions(false);
 
 		if (model.getFirstSave()) {
@@ -310,16 +292,6 @@ public class DefaultMultipleDocumentModel extends JTabbedPane implements Multipl
 		for (MultipleDocumentListener l : listeners) {
 			l.documentRemoved(model);
 		}
-	}
-
-	@Override
-	public void addMultipleDocumentListener(MultipleDocumentListener l) {
-		this.listeners.add(l);
-	}
-
-	@Override
-	public void removeMultipleDocumentListener(MultipleDocumentListener l) {
-		this.listeners.remove(l);
 	}
 
 	@Override
